# Own-Note

./: README.md
cpp/: README.md  bug.md  p1.md  p2.md  模板.md
cpp/MiniSTL/: CMakeLists.txt
cpp/MiniSTL/allocator/: stl_alloc.h  stl_alloc_first.h  stl_alloc_second.h  stl_alloc_second.imp.h  stl_construct.h  stl_uninitialized.h
cpp/MiniSTL/containers/deque/: stl_deque.h  stl_deque.imp.h  stl_deque_iterator.h
cpp/MiniSTL/containers/list/: stl_list.h  stl_list.imp.h  stl_list_iterator.h
cpp/MiniSTL/containers/vector/: stl_vector.h  stl_vector.imp.h
cpp/MiniSTL/iterator/: stl_iterator.h  type_traits.h
leetcode-daily/: part1.md  part2.md  part3.md  part4.md  part5.md
leetcode-daily/part1/: CMakeLists.txt
leetcode-daily/part1/q1/: main.cpp
leetcode-daily/part1/q2/: main.cpp
leetcode-daily/part1/q3/: main.cpp
leetcode-daily/part1/q4/: main.cpp
leetcode-daily/part1/q5/: main.cpp
leetcode-daily/part1/q6/: CMakeLists.txt  main.cpp
leetcode-daily/part2/: CMakeLists.txt
leetcode-daily/part3/: CMakeLists.txt
leetcode-daily/part4/: CMakeLists.txt
matlab/: Note1.md
mxnet/: mshadow.md
mxnet/mshadow/: exp_template.md
python/: 1026.md  190124.md  pandas.md  sklearn.md
pytorch/: README.md  cpp_extension.md
pytorch/cpp/: cpp_extension.md  libtorch.md
pytorch/cpp/demo/nms/: CMakeLists.txt  main.cpp  nms_cpu.h
pytorch/cpp_extension/: README.md
pytorch/translate/: README.md
software/: clion.md  cuda.md  gcc.md  git.md  linux.md  matlab.md  opencv.md  others.md  python.md  tmux.md  ubuntu.md  ubuntu_install.md  vscode.md
(+68 files in other folders)
